--- a/AirBnB,classification.ipynb
+++ b/AirBnB,classification.ipynb
@@ -2,14 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Classification - KNN"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,47 +25,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": [
-      "id int64\n",
-      "name object\n",
-      "host_id int64\n",
-      "host_name object\n",
-      "neighbourhood_group object\n",
-      "neighbourhood object\n",
-      "latitude float64\n",
-      "longitude float64\n",
-      "room_type object\n",
-      "price int64\n",
-      "minimum_nights int64\n",
-      "number_of_reviews int64\n",
-      "last_review object\n",
-      "reviews_per_month float64\n",
-      "calculated_host_listings_count int64\n",
-      "availability_365 int64\n",
-      "id                                  int64\n",
-      "name                               object\n",
-      "host_id                             int64\n",
-      "host_name                          object\n",
-      "neighbourhood_group                object\n",
-      "neighbourhood                      object\n",
-      "latitude                          float64\n",
-      "longitude                         float64\n",
-      "room_type                          object\n",
-      "price                               int64\n",
-      "minimum_nights                      int64\n",
-      "number_of_reviews                   int64\n",
-      "last_review                        object\n",
-      "reviews_per_month                 float64\n",
-      "calculated_host_listings_count      int64\n",
-      "availability_365                    int64\n",
-      "dtype: object\n"
-     ]
+     "text": "id int64\nname object\nhost_id int64\nhost_name object\nneighbourhood_group object\nneighbourhood object\nlatitude float64\nlongitude float64\nroom_type object\nprice int64\nminimum_nights int64\nnumber_of_reviews int64\nlast_review object\nreviews_per_month float64\ncalculated_host_listings_count int64\navailability_365 int64\nid                                  int64\nname                               object\nhost_id                             int64\nhost_name                          object\nneighbourhood_group                object\nneighbourhood                      object\nlatitude                          float64\nlongitude                         float64\nroom_type                          object\nprice                               int64\nminimum_nights                      int64\nnumber_of_reviews                   int64\nlast_review                        object\nreviews_per_month                 float64\ncalculated_host_listings_count      int64\navailability_365                    int64\ndtype: object\n"
     }
    ],
    "source": [
@@ -82,36 +50,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": [
-      "[0 0 0 0 0 0 4 4 0 0 0 0 0 0 0 0 4 4 0 0 0 0 0 3 2 0 0 3 0 0 0 0 0 0 0 0 0\n",
-      " 0 0 0 0 0 4 0 0 0 0 0 0 3 0 0 0 0 1 0 4 0 0 0 0 3 0 0 0 2 0 0 0 0 0 1 0 0\n",
-      " 0 0 0 0 0 0 0 0 0 4 0 0 3 0 1 0 1 0 0 0 4 0 0 0 0 0 0 0 0 0 0 0 2 0 0 1 0\n",
-      " 0 0 0 0 0 0 0 0 0 0 0 0 4 4 0 0 0 1 0 0 0 0 0 0 0 0 0 0 4 0 4 4 0 0 4 1 2\n",
-      " 0 3 0 0 0 1 0 0 0 0 0 0 1 1 0 0 0 4 3 0 4 0 0 0 0 0 0 0 0 0 2 0 0 0 0 2 0\n",
-      " 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 4 0 0 0 0 0 1 0 0 0 4 0 0 0 0 0 0 1 0 0 0 0\n",
-      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 4 3 0 0 0 4 0 1 0 0 0 0 0 0 0 0 0 0 0\n",
-      " 0 0 0 0 1 0 1 0 4 0 0 1 0 0 0 0 3 0 0 0 0 0 0 1 2 0 0 0 0 2 0 3 0 0 4 0 4\n",
-      " 0 0 4 0 0 0 0 0 0 0 0 0 0 0 4 0 0 0 0 2 3 0 0 4 0 0 0 0 0 0 2 0 0 0 0 0 0\n",
-      " 0 0 0 0 0 0 4 0 2 0 0 3 0 0 0 0 0 0 0 4 3 0 0 0 1 4 0 0 0 0 0 1 0 0 0 0 4\n",
-      " 0 0 0 0 1 1 0 0 0 0 0 0 0 0 0 0 0 0 0 4 0 4 3 0 0 0 0 0 0 4 0 0 0 0 0 0 0\n",
-      " 0 1 0 0 0 0 0 0 0 0 0 0 1 0 0 0 1 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 3 0 0 3 0\n",
-      " 0 0 1 0 0 1 0 3 0 0 0 0 0 0 4 0 0 3 0 0 0 0 2 0 0 0 4 0 3 4 0 0 0 0 0 0 1\n",
-      " 0 0 0 0 0 1 4 0 1 1 0 0 0 2 0 0 3 4 0 0 0 3 0 0 0 0 0 0 3 0 0 0 0 0 0 3 0\n",
-      " 0 0 0 0 0 0 0 0 3 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 2 0 0 0\n",
-      " 0 0 0 0 2 0 0 0 1 2 0 0 2 0 0 0 0 0 0 0 4 2 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0\n",
-      " 0 0 0 2 3 0 0 0 0 0 0 4 3 0 0 0 0 4 0 0 0 0 4 0 1 0 0 4 4 0 0 0 0 0 0 0 0\n",
-      " 0 3 0 0 0 0 0 4 0 0 0 3 3 2 0 0 0 0 0 0 0 0 0 0 0 0 2 0 1 0 1 0 0 0 0 0 0\n",
-      " 0 0 0 0 0 0 0 0 1 0 0 4 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 4 0 0 0 0\n",
-      " 0 0 4 0 0 2 4 1 0 0 1 0 0 0 3 2 0 3 0 0 0 0 0 2 0 0 3 0 0 0 0 3 0 0 1 0 1\n",
-      " 3 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 1 0 0 3 0 0 0 0 0 0 0 2 0 1 0 0 3 0\n",
-      " 4 0 0 0 0 0 0 0 0 0 0 0 0 1]\n"
-     ]
+     "text": "[0 0 0 0 0 4 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 4 0 3 0 0 0 0 0 0 0\n 0 0 0 0 0 4 0 0 4 0 1 0 0 1 0 1 0 0 1 0 0 0 0 3 0 0 3 0 1 0 0 4 1 3 2 0 4\n 0 4 0 0 0 0 0 0 0 4 0 0 0 0 0 0 3 4 0 0 0 1 0 0 0 0 0 0 0 0 4 0 0 0 0 0 0\n 0 0 0 0 0 3 0 1 0 0 0 0 3 0 0 0 2 3 3 0 0 0 1 1 0 0 0 0 0 0 0 0 0 1 0 0 0\n 0 3 0 1 0 0 0 0 0 0 0 0 0 0 0 4 0 0 0 3 0 0 0 0 0 0 0 0 0 2 0 4 0 0 1 0 1\n 0 1 0 0 0 0 0 0 1 1 0 0 0 0 0 0 0 0 0 0 0 4 0 0 3 0 0 0 3 1 0 0 1 0 0 0 0\n 0 0 0 4 1 0 0 0 3 0 4 0 0 0 0 0 0 0 3 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0\n 0 0 3 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 4 0 1 0 0 0 2 0 0 0 0 4\n 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 3 0 0 0 0 0 0 0 0 0 0 0 0 3 0 0 0 0 0 0 2\n 0 0 0 0 3 0 0 0 0 0 0 0 3 2 2 0 0 0 0 0 0 0 0 0 0 0 0 0 3 0 0 0 0 0 0 0 2\n 2 0 4 0 0 4 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 1 4 0 0 0 0 1 0 0 0 1\n 0 1 0 1 0 0 0 4 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 4 0 0 4 0 0 4 0\n 0 0 0 0 4 0 1 0 0 0 0 0 0 4 0 0 0 0 0 0 0 0 0 0 4 0 0 0 0 0 0 4 0 0 0 0 0\n 0 0 0 1 0 0 0 0 0 1 0 0 3 0 0 0 0 0 0 0 0 0 1 0 3 0 0 0 0 1 2 0 0 0 3 0 0\n 0 1 0 0 0 0 0 0 0 0 0 2 3 0 0 4 0 0 0 0 4 0 0 1 0 0 0 4 0 0 0 0 0 0 0 0 0\n 1 0 0 0 0 0 4 0 4 0 0 0 0 0 2 0 0 0 0 4 0 0 0 0 0 2 0 0 3 0 0 0 0 0 0 0 0\n 0 0 0 0 0 0 0 0 4 1 0 0 0 0 0 4 0 0 0 0 0 0 0 0 0 3 4 0 1 0 0 0 0 0 0 0 0\n 0 0 0 0 0 3 2 0 0 0 1 4 0 0 0 0 4 0 0 0 3 0 0 0 0 4 0 0 0 0 0 0 3 2 4 0 2\n 0 0 0 1 0 4 0 0 2 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n 3 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 4 0 0 0 0 3 0 0 0 0 0 0 0 3 4 0 1\n 0 0 0 0 3 1 0 0 0 0 0 1 0 0 0 0 0 0 4 0 4 0 0 1 1 0 0 0 0 0 0 0 0 4 1 0 0\n 0 4 0 0 0 0 0 0 0 0 0 0 0 0]\n"
     }
    ],
    "source": [
@@ -124,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,18 +78,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": [
-      "[4 4]\n",
-      " ACC : 1.00\n",
-      " MAE : 0.01\n",
-      " MSE : 0.03\n"
-     ]
+     "text": "[4 4]\n ACC : 0.99\n MAE : 0.01\n MSE : 0.03\n"
     }
    ],
    "source": [
@@ -163,22 +103,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": [
-      "Best  ACC : 1.00 , with k =  44\n"
-     ]
+     "text": "Best  ACC : 0.99 , with k =  3\n"
     }
    ],
    "source": [
     "Ks = 10\n",
     "accuracy = np.zeros((Ks-1))\n",
     "ConfustionMx = [];\n",
-    "for n in range(1, Ks):    \n",
+    "for n in range(3, Ks, 2):\n",
     "    KNN = KNeighborsClassifier(n_neighbors = n).fit(train[[\"latitude\", \"longitude\"]], target_encoded)  \n",
     "    classification = KNN.predict(test[[\"latitude\", \"longitude\"]])\n",
     "    accuracy[n - 1] = accuracy_score(actual_encoded, classification)\n",
@@ -210,7 +148,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6-final"
   }
  },
  "nbformat": 4,
